force-app/main/default/objects/SalesforceOrderItem__x/SalesforceOrderItem__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceOrderItem</externalName>
    <label>Ordine prodotto Salesforce</label>
    <pluralLabel>Ordini prodotti Salesforce</pluralLabel>
</CustomObject>