force-app/main/default/objects/SalesforceOrderItem__x/fields/CategoryFamilyC__c.field-meta.xml
<CustomField>
    <fullName>CategoryFamilyC__c</fullName>
    <description>CategoryFamilyC</description>
    <externalDeveloperName>CategoryFamilyC</externalDeveloperName>
    <label>Categoria Famiglia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>