force-app/main/default/objects/SalesforceOrderItem__x/fields/CategoryTypeClientC__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClientC__c</fullName>
    <description>CategoryTypeClientC</description>
    <externalDeveloperName>CategoryTypeClientC</externalDeveloperName>
    <label>CategoryTypeClientC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>