force-app/main/default/objects/SalesforceOrderItem__x/fields/ChannelClientC__c.field-meta.xml
<CustomField>
    <fullName>ChannelClientC__c</fullName>
    <description>ChannelClientC</description>
    <externalDeveloperName>ChannelClientC</externalDeveloperName>
    <label>ChannelClientC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>