force-app/main/default/objects/SalesforceOrderItem__x/fields/ClientAgeC__c.field-meta.xml
<CustomField>
    <fullName>ClientAgeC__c</fullName>
    <description>ClientAgeC</description>
    <externalDeveloperName>ClientAgeC</externalDeveloperName>
    <label>ClientAgeC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>