force-app/main/default/objects/SalesforceOrderItem__x/fields/ConsumptionRangeGASC__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGASC__c</fullName>
    <description>ConsumptionRangeGASC</description>
    <externalDeveloperName>ConsumptionRangeGASC</externalDeveloperName>
    <label>ConsumptionRangeGASC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>