force-app/main/default/objects/SalesforceOrderItem__x/fields/ConventionC__c.field-meta.xml
<CustomField>
    <fullName>ConventionC__c</fullName>
    <description>ConventionC</description>
    <externalDeveloperName>ConventionC</externalDeveloperName>
    <label>Convenzione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>