force-app/main/default/objects/SalesforceOrderItem__x/fields/DiscountEurMWhC__c.field-meta.xml
<CustomField>
    <fullName>DiscountEurMWhC__c</fullName>
    <description>DiscountEurMWhC</description>
    <externalDeveloperName>DiscountEurMWhC</externalDeveloperName>
    <label>DiscountEurMWhC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>