force-app/main/default/objects/SalesforceOrderItem__x/fields/DurationDayC__c.field-meta.xml
<CustomField>
    <fullName>DurationDayC__c</fullName>
    <description>DurationDayC</description>
    <externalDeveloperName>DurationDayC</externalDeveloperName>
    <label>Durata </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>