force-app/main/default/objects/SalesforceOrderItem__x/fields/DwellingTypeC__c.field-meta.xml
<CustomField>
    <fullName>DwellingTypeC__c</fullName>
    <description>DwellingTypeC</description>
    <externalDeveloperName>DwellingTypeC</externalDeveloperName>
    <label>Tipo di Abitazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>