force-app/main/default/objects/SalesforceOrderItem__x/fields/GreenGasOptionC__c.field-meta.xml
<CustomField>
    <fullName>GreenGasOptionC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GreenGasOptionC</description>
    <externalDeveloperName>GreenGasOptionC</externalDeveloperName>
    <label>Opzione Gas Verde</label>
    <type>Checkbox</type>
</CustomField>