force-app/main/default/objects/SalesforceOrderItem__x/fields/MonthsOccupationC__c.field-meta.xml
<CustomField>
    <fullName>MonthsOccupationC__c</fullName>
    <description>MonthsOccupationC</description>
    <externalDeveloperName>MonthsOccupationC</externalDeveloperName>
    <label>Mesi Occupazione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>