force-app/main/default/objects/SalesforceOrderItem__x/fields/MonthsOccupYearC__c.field-meta.xml
<CustomField>
    <fullName>MonthsOccupYearC__c</fullName>
    <description>MonthsOccupYearC</description>
    <externalDeveloperName>MonthsOccupYearC</externalDeveloperName>
    <label>Mesi di occupazione nell'anno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>