force-app/main/default/objects/SalesforceOrderItem__x/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>OrderId</description>
    <externalDeveloperName>OrderId</externalDeveloperName>
    <label>OrderId</label>
    <length>255</length>
    <referenceTo>SalesforceOrder__x</referenceTo>
    <relationshipLabel>Prodotti ordine Salesforce</relationshipLabel>
    <relationshipName>ProdottiOrdineSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>