force-app/main/default/objects/SalesforceOrderItem__x/fields/PercentageF0C__c.field-meta.xml
<CustomField>
    <fullName>PercentageF0C__c</fullName>
    <description>PercentageF0C</description>
    <externalDeveloperName>PercentageF0C</externalDeveloperName>
    <label>Percentuale F0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>