force-app/main/default/objects/SalesforceOrderItem__x/fields/PODCodeC__c.field-meta.xml
<CustomField>
    <fullName>PODCodeC__c</fullName>
    <description>PODCodeC</description>
    <externalDeveloperName>PODCodeC</externalDeveloperName>
    <label>PODCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>