force-app/main/default/objects/SalesforceOrderItem__x/fields/PriceGasC__c.field-meta.xml
<CustomField>
    <fullName>PriceGasC__c</fullName>
    <description>PriceGasC</description>
    <externalDeveloperName>PriceGasC</externalDeveloperName>
    <label>PriceGasC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>