force-app/main/default/objects/SalesforceOrderItem__x/fields/PriceRidFixedC__c.field-meta.xml
<CustomField>
    <fullName>PriceRidFixedC__c</fullName>
    <description>PriceRidFixedC</description>
    <externalDeveloperName>PriceRidFixedC</externalDeveloperName>
    <label>PriceRidFixedC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>