force-app/main/default/objects/SalesforceOrderItem__x/fields/ProductNameC__c.field-meta.xml
<CustomField>
    <fullName>ProductNameC__c</fullName>
    <description>ProductNameC</description>
    <externalDeveloperName>ProductNameC</externalDeveloperName>
    <label>ProductNameC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>