force-app/main/default/objects/SalesforceOrderItem__x/fields/ProductVersionC__c.field-meta.xml
<CustomField>
    <fullName>ProductVersionC__c</fullName>
    <description>ProductVersionC</description>
    <externalDeveloperName>ProductVersionC</externalDeveloperName>
    <label>ProductVersionC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>