force-app/main/default/objects/SalesforceOrderItem__x/fields/ReturnSafeGuardDataC__c.field-meta.xml
<CustomField>
    <fullName>ReturnSafeGuardDataC__c</fullName>
    <description>ReturnSafeGuardDataC</description>
    <externalDeveloperName>ReturnSafeGuardDataC</externalDeveloperName>
    <label>Data Ritorno Salvaguardia</label>
    <type>DateTime</type>
</CustomField>