force-app/main/default/objects/SalesforceOrderItem__x/fields/SerQFQVC__c.field-meta.xml
<CustomField>
    <fullName>SerQFQVC__c</fullName>
    <description>SerQFQVC</description>
    <externalDeveloperName>SerQFQVC</externalDeveloperName>
    <label>Ser. QF/QV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>