force-app/main/default/objects/SalesforceOrderItem__x/fields/VersionC__c.field-meta.xml
<CustomField>
    <fullName>VersionC__c</fullName>
    <description>VersionC</description>
    <externalDeveloperName>VersionC</externalDeveloperName>
    <label>Versione Prodotto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>